fix: gap 삭제

--- a/src/app/components/profile/profileInfo.module.scss
+++ b/src/app/components/profile/profileInfo.module.scss
@@ -55,4 +55,5 @@
   align-items: center;
   flex: 3;
   margin-left: 2rem;
+  gap: 0.5rem;
 }
